/// Placeholder proto modules for gRPC services
/// These will be replaced with actual proto-generated code when proper proto files are available

pub mod content {
    // Placeholder proto message definitions
    #[derive(Clone, PartialEq, ::prost::Message)]
    pub struct GetFeedRequest {
        #[prost(string, tag = "1")]
        pub user_id: String,
        #[prost(string, tag = "2")]
        pub algo: String,
        #[prost(uint32, tag = "3")]
        pub limit: u32,
        #[prost(string, tag = "4")]
        pub cursor: String,
    }

    #[derive(Clone, PartialEq, ::prost::Message)]
    pub struct GetFeedResponse {
        #[prost(string, repeated, tag = "1")]
        pub post_ids: Vec<String>,
        #[prost(string, tag = "2")]
        pub cursor: String,
        #[prost(bool, tag = "3")]
        pub has_more: bool,
        #[prost(uint32, tag = "4")]
        pub total_count: u32,
    }

    #[derive(Clone, PartialEq, ::prost::Message)]
    pub struct InvalidateFeedEventRequest {
        #[prost(string, tag = "1")]
        pub event_type: String,
        #[prost(string, tag = "2")]
        pub user_id: String,
        #[prost(string, tag = "3")]
        pub target_user_id: String,
    }

    #[derive(Clone, PartialEq, ::prost::Message)]
    pub struct InvalidateFeedEventResponse {
        #[prost(bool, tag = "1")]
        pub success: bool,
    }

    // Stub client implementation for future gRPC integration
    // TODO: Replace with proper tonic-generated client code from proto files
    pub mod content_service_client {
        use super::*;
        use tonic::transport::Channel;

        #[derive(Clone)]
        pub struct ContentServiceClient<T> {
            _inner: T,
        }

        impl ContentServiceClient<Channel> {
            pub fn new(_channel: Channel) -> Self {
                Self {
                    _inner: _channel,
                }
            }

            pub async fn get_feed(
                &mut self,
                _request: super::GetFeedRequest,
            ) -> Result<super::GetFeedResponse, std::io::Error> {
                // TODO: Implement actual gRPC call
                Ok(GetFeedResponse {
                    post_ids: vec![],
                    cursor: String::new(),
                    has_more: false,
                    total_count: 0,
                })
            }

            pub async fn invalidate_feed_event(
                &mut self,
                _request: super::InvalidateFeedEventRequest,
            ) -> Result<super::InvalidateFeedEventResponse, std::io::Error> {
                // TODO: Implement actual gRPC call
                Ok(InvalidateFeedEventResponse { success: true })
            }
        }
    }
}
